docs: add swagger documentation for OAuth Login
